# finance-news-sentiment-classifier

./: .env.example  .gitignore  README.md  deploy.py  finance-news-sentiment-classifier.ipynb  finmood.ipynb  main.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: deploy.py  entry_point.py  test.py  web-app.py
