[project]
name = "finmood"
version = "0.1.0"
description = "Finance news sentiment classifier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.8",
    "python-dotenv>=1.0.1",
    "sagemaker>=2.241.0",
    "streamlit>=1.43.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
